[package]
name = "noway"
version = "0.1.1"
edition = "2024"
description = "CLI tool to download archived pages from the Wayback Machine"
repository = "https://github.com/rvcas/noway"
authors = ["rvcas <x@rvcas.dev>"]
rust-version = "1.89.0"
license-file = "LICENSE"

[[bin]]
name = "noway"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
miette = { version = "7.6.0", features = ["fancy"] }
names = { version = "0.14", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
urlencoding = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
